finished home header

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site for our Hackathon"
-    />
+    <meta name="description" content="Web site for our Hackathon" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>?</title>
+    <title>Moodsic</title>
   </head>
   <body>
     <div id="root"></div>
